<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/orcontinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="156dp"
            android:text="@string/or_continue_with"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/masukbutton" />

        <Button
            android:id="@+id/masukbutton"
            android:layout_width="333dp"
            android:layout_height="53dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="376dp"
            android:layout_marginEnd="156dp"
            android:text="@string/masuk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="235dp"
            android:layout_marginTop="344dp"
            android:layout_marginEnd="63dp"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="334dp"
            android:layout_height="53dp"
            android:layout_marginStart="102dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="99dp"
            android:ems="10"
            android:hint="@string/password4"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="336dp"
            android:layout_height="57dp"
            android:layout_marginStart="101dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/enter_email3"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/daftartext"
            android:layout_width="190dp"
            android:layout_height="18dp"
            android:layout_marginStart="158dp"
            android:layout_marginTop="696dp"
            android:layout_marginEnd="195dp"
            android:text="@string/belum_punya_akun_daftar2"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="265dp"
            android:layout_height="48dp"
            android:layout_marginStart="158dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="195dp"
            android:text="@string/hallo_welcome"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.362"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="418dp"
            android:layout_height="193dp"
            android:src="@drawable/biru_dan_kuning_ilustrasi_imut_modern_logo_bimbingan_belajar__1__removebg_preview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="59dp"
            android:layout_height="55dp"
            android:layout_marginTop="536dp"
            android:src="@drawable/pngegg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.272"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="55dp"
            android:layout_height="51dp"
            android:layout_marginTop="536dp"
            android:src="@drawable/pngegg__1_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_marginTop="536dp"
            android:src="@drawable/pngegg__2_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>